WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227424
[iOS] Safari sometimes hangs under sync IPC in `-[WKWebView _setSuppressSoftwareKeyboard:]`
https://bugs.webkit.org/show_bug.cgi?id=227424
Summary
[iOS] Safari sometimes hangs under sync IPC in `-[WKWebView _setSuppressSoftw...
Wenson Hsieh
Reported
2021-06-26 14:53:08 PDT
rdar://79745385
Attachments
Patch
(8.78 KB, patch)
2021-06-26 15:37 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-06-26 15:37:30 PDT
Created
attachment 432339
[details]
Patch
Wenson Hsieh
Comment 2
2021-06-26 18:45:54 PDT
Comment on
attachment 432339
[details]
Patch Thanks for the review!
EWS
Comment 3
2021-06-26 19:06:54 PDT
Committed
r279310
(
239186@main
): <
https://commits.webkit.org/239186@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 432339
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug